# owstats

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/capture/: capture.py
src/database/: database.py
src/models/: gamemode.py  player_stats.py
src/ocr/: ocr.py
src/tests/: test_capture.py
